// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`html template can generate page from tags 1`] = `
"
<html lang=\\"en\\">

  <head>
    <meta charset=\\"utf-8\\" />
    <title>a title</title>
    <meta property=\\"og:image\\" content=\\"a image\\" /> 

  <style>
body {
  font-family: system-ui, -apple-system, BlinkMacSystemFont, \\"Segoe UI\\", Roboto, \\"Helvetica Neue\\", sans-serif;
  font-weight: normal;
  margin: 0;
  padding: 2rem;
}

main {
  display: flex;
  alignItems: center;
  justifyContent: center;
}

.content {
  margin: 0 auto;
  maxWidth: 62rem;
}

.url {
  color: #045aff;
}
  </style>

  </head>

  <body>
    <main>
      <div class=\\"content\\">

<h1>Tag Tester page for <code class=\\"url\\">https://tagtester.dev</code></h1>

<p><a href=\\"https://tagtester.dev?url=https%3A%2F%2Ftagtester.dev\\">View on tagtester.dev</a>
</p>

<p>

Original metatags from <a href=\\"https://tagtester.dev\\">https://tagtester.dev</a> have been combined with these modified
tags

<li>title</li>

</p>

<p>

Enter this url on the following metatag testers

<ul>
  <li><a href=\\"https://cards-dev.twitter.com/validator\\">Twitter card validator</a></li>
  <li><a href=\\"https://developers.facebook.com/tools/debug/\\">Facebook Debugger</a></li>
  <li><a href=\\"https://www.linkedin.com/post-inspector/inspect/\\">LinkedIn insepctor</a></li>
</ul>

</p>

      </div>
    </main>
  </body>

</html>
"
`;

exports[`html template can generate page from tags with no custom 1`] = `
"
<html lang=\\"en\\">

  <head>
    <meta charset=\\"utf-8\\" />
    <title>a title</title>
    <meta property=\\"og:image\\" content=\\"a image\\" /> 

  <style>
body {
  font-family: system-ui, -apple-system, BlinkMacSystemFont, \\"Segoe UI\\", Roboto, \\"Helvetica Neue\\", sans-serif;
  font-weight: normal;
  margin: 0;
  padding: 2rem;
}

main {
  display: flex;
  alignItems: center;
  justifyContent: center;
}

.content {
  margin: 0 auto;
  maxWidth: 62rem;
}

.url {
  color: #045aff;
}
  </style>

  </head>

  <body>
    <main>
      <div class=\\"content\\">

<h1>Tag Tester page for <code class=\\"url\\">https://tagtester.dev</code></h1>

<p><a href=\\"https://tagtester.dev?url=https%3A%2F%2Ftagtester.dev\\">View on tagtester.dev</a>
</p>

<p>
The original tags are being used as none have been modified
</p>

<p>

Enter this url on the following metatag testers

<ul>
  <li><a href=\\"https://cards-dev.twitter.com/validator\\">Twitter card validator</a></li>
  <li><a href=\\"https://developers.facebook.com/tools/debug/\\">Facebook Debugger</a></li>
  <li><a href=\\"https://www.linkedin.com/post-inspector/inspect/\\">LinkedIn insepctor</a></li>
</ul>

</p>

      </div>
    </main>
  </body>

</html>
"
`;
